# python-mcscores

./: .gitignore  README.md  mcscoreboard.py  pyproject.toml  requirements.txt
.github/workflows/: lint_and_test.yml
src/mc_score_utils/: __main__.py  core.py  mc_score_utils.py
tests/: test_scoreboard.py
