[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mc_score_utils"
version = "0.3.0"
authors = [
    { name = "Seth 'Violet' Gibbs" }
]
description = "Mainly provides a `Scoreboard` class to interact with Minecraft scoreboard data through its .dat file."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies=[
    "NBT==1.5.1",
    "tqdm==4.66.5"
]